HFP-237 Corrected spacing from video to wizard navigation buttons.

--- a/styles/interactive-video-editor.css
+++ b/styles/interactive-video-editor.css
@@ -559,7 +559,7 @@
 .h5peditor-interactions.h5p-interactive-video {
   font-weight: inherit;
   padding: 0;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: inherit;
 }
 
